# yuu

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  llvm_c_abi_cheat_sheet.md  test_assignment.yuu  test_example.yuu  test_heap_alloc.yuu  test_sync.yuu
.github/workflows/: rust.yml
bench_data/: comprehensive.yuu  gen_1m.py  gigantic_benchmark.yuu  minimal.yuu  simple.yuu
benches/: compiler_benchmarks.rs
src/: lib.rs  main.rs
src/NOT_USED_pass-cranelift_lowering/: pass_yir_to_cranelift.rs
src/pass-break_semantic_analysis/: mod.rs  pass_break_semantic_analysis_impl.rs
src/pass-c_compilation/: mod.rs  pass_c_compilation_impl.rs
src/pass-c_lowering/: mod.rs  pass_yir_to_c.rs
src/pass-check_decl_def/: mod.rs  pass_check_decl_def_impl.rs
src/pass-compiler_plugin_s1/: mod.rs  pass_compiler_plugin_s1_impl.rs
src/pass-control_flow_analysis/: mod.rs  pass_control_flow_analysis_impl.rs
src/pass-cranelift_lowering/: mod.rs  pass_yir_to_cranelift.rs
src/pass-diagnostics/: error.rs  mod.rs  pass_check_errors.rs  pass_diagnostics_impl.rs
src/pass-lexing/: mod.rs  pass_lexing_impl.rs  token.rs
src/pass-lifetime_analysis/: memory_graph.rs  mod.rs  pass_lifetime_analysis_impl.rs
src/pass-llvm_lowering/: mod.rs  pass_yir_to_llvm.rs
src/pass-mutability_analysis/: mod.rs  pass_mutability_analysis_impl.rs
src/pass-parse/: add_ids.rs  ast.rs  lexer.rs  mod.rs  parser.rs  pass_parse.rs  pass_parse_impl.rs  token.rs  token_iterator.rs
src/pass-print_yir/: mod.rs  pass_print_yir.rs  pass_print_yir_impl.rs  yir_printer.rs
src/pass-type_dependencies/: mod.rs  pass_type_dependencies_impl.rs
src/pass-type_dependency_analysis/: mod.rs  pass_type_dependencies_impl.rs
src/pass-type_inference/: binding.rs  binding_info.rs  expr.rs  mod.rs  pass_type_inference.rs  pass_type_inference_impl.rs  pattern.rs  stmt.rs  structural.rs  type_info.rs  type_registry.rs  types.rs
src/pass-type_registration/: mod.rs  pass_type_registration_impl.rs
src/pass-yir_lowering/: block.rs  mod.rs  pass_ast_to_yir.rs  pass_ast_to_yir_impl.rs  yir.rs
src/scheduling/: context.rs  mod.rs  scheduler.rs
src/utils/: binding_info.rs  block.rs  c_packing.rs  collections.rs  context.rs  layout_calculation.rs  lua_executor.rs  mod.rs  pipeline.rs  scheduler.rs  type_info_table.rs  type_registry.rs
src/utils/c_abi/: core.rs  mod.rs
src/utils/c_abi/x86_64_system_v/: lowering.rs  mod.rs
tests/: c_interop.yuu  e2e_algorithms.rs  e2e_basic_types.rs  e2e_blocks.rs  e2e_complex_expr.rs  e2e_control_flow.rs  e2e_data_structures.rs  e2e_decl_def.rs  e2e_enums.rs  e2e_error_handling.rs  e2e_functions.rs  e2e_heap_allocation.rs  e2e_pointer_arithmetic.rs  e2e_pointers.rs  e2e_structs.rs  e2e_type_system.rs  e2e_unified_call.rs  e2e_variables.rs  lifetime_analysis_test.rs  print_yir_tests.rs  source2c.rs  unified_call_syntax_test.rs
tests/common/: mod.rs
yuu-codegen/: Cargo.toml
yuu-codegen/src/: lib.rs  pass_gen_cranelift_ir.rs  pass_yir_to_c.rs
yuu-main/: Cargo.toml
yuu-main/src/: main.rs
yuu-parse/: Cargo.toml
yuu-parse/src/: add_ids.rs  lexer.rs  lib.rs  parser.rs  pass_parse.rs
yuu-shared/: Cargo.toml
yuu-shared/src/: ast.rs  binding_info.rs  block.rs  context.rs  error.rs  graphviz_output.rs  lib.rs  print_yir.rs  scheduler.rs  semantic_error.rs  token.rs  type_info.rs  type_registry.rs  yir.rs  yir_printer.rs
yuu-transform/: Cargo.toml
yuu-transform/src/: OLD_pass_type_infer.rs  binding_info.rs  block.rs  built_in.rs  lib.rs  mangling.rs  pass_ast_to_yir.rs  pass_check_errors.rs  pass_collect_decls.rs  pass_print_errors.rs  pass_print_yir.rs  pass_type_check.rs  pass_type_inference.rs  print_yir.rs  semantic_error.rs  type_check.rs  type_info.rs
yuu-transform/src/type_inference/: binding.rs  expr.rs  mod.rs  pass_type_inference.rs  stmt.rs  structural.rs  types.rs
