[package]
name = "yuu"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "yuu"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.0", features = ["derive"] }
indexmap = { version = "2.10.0", features = ["serde"] }
logos = "0.15.0"
scc = "2.3.4"
serde = { version = "1.0.219", features = ["derive"] }
miette = { version = "7.6.0", features = ["fancy", "syntect-highlighter"] }
thiserror = "2.0.12"
syntect = "5.2.0"
ustr = { version = "1.1.0", features = ["serde"] }
termcolor = "1.4.1"
colored = "3.0.0"
tempfile = "3.10.1"

[dev-dependencies]
assert_cmd = "2.0.14"