[package]
name = "yuu"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "yuu"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.51", features = ["derive"] }
indexmap = { version = "2.12.0", features = ["serde"] }
logos = "0.15.1"
scc = "3.3.2"
serde = { version = "1.0.228", features = ["derive"] }
miette = { version = "7.6.0", features = ["fancy", "syntect-highlighter"] }
thiserror = "2.0.17"
syntect = "5.3.0"
ustr = { version = "1.1.0", features = ["serde"] }
termcolor = "1.4.1"
colored = "3.0.0"
#tempfile = "3.10.1"
ron = "0.11.0"

[dev-dependencies]
assert_cmd = "2.1.1"
