[package]
name = "yuu"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "yuu"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
indexmap = { version = "2.12.1", features = ["serde"] }
logos = "0.16.0"
scc = "3.4.8"
rustc-hash = "2.1.1"
serde = { version = "1.0.228", features = ["derive"] }
miette = { version = "7.6.0", features = ["fancy", "syntect-highlighter"] }
thiserror = "2.0.17"
syntect = "5.3.0"
ustr = { version = "1.1.0", features = ["serde"] }
termcolor = "1.4.1"
colored = "3.0.0"
#tempfile = "3.10.1"
ron = "0.12.0"
petgraph = "0.8.3"
mimalloc = "0.1.48"
rayon = "1.11.0"
mlua = { version = "0.11.5", features = ["luajit", "vendored", "serialize"] }

[dev-dependencies]
assert_cmd = "2.1.1"
criterion = { version = "0.8.1", features = ["html_reports"] }

[[bench]]
name = "compiler_benchmarks"
harness = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.profiling]
inherits = "release"
debug = "full"
strip = false
lto = false
codegen-units = 16
split-debuginfo = "unpacked"
