[package]
name = "yuu-parse"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.95"
logos = "0.15.0"
ron = "0.8.1"
serde = "1.0.215"
thiserror = "2.0.3"
miette = { version = "7.5.0", features = ["fancy", "syntect-highlighter"] }
yuu-shared = { path = "../yuu-shared" }
ustr = { version = "1.1.0", features = ["serde"] }
