[package]
name = "yuu-shared"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.95"
indexmap = { version = "2.8.0", features = ["serde"] }
logos = "0.15.0"
petgraph = "0.7.0"
rayon = "1.10.0"
scc = "2.3.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
miette = { version = "7.5.0", features = ["fancy", "syntect-highlighter"] }
thiserror = "2.0.3"
syntect = "5.1.0"
ustr = { version = "1.1.0", features = ["serde"] }
termcolor = "1.4.1"
bumpalo = { version = "3.17.0", features = ["collections"] }
