[package]
name = "yuu-transform"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
colored = "2.2.0"
hashbrown = "0.15.1"
miette = { version = "7.5.0", features = ["fancy", "syntect-highlighter"] }
serde_json = "1.0.134"
thiserror = "2.0.3"
yuu-parse = { path = "../yuu-parse" }
yuu-shared = { path = "../yuu-shared" }
